--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -7,8 +7,12 @@
         <span class="navbar-brand">Ambitious ArcGIS App</span>
       </div>
       <ul class="nav navbar-nav">
-        <li>{{#link-to "index" }}Home{{/link-to}}</li>
-        <li>{{link-to "Items" "items" }}</li>
+        {{#active-link}}
+          {{link-to "Home" "index"}}
+        {{/active-link}}
+        {{#active-link}}
+          {{link-to "Items" "items"}}
+        {{/active-link}}
       </ul>
     </div><!--/.container-fluid -->
   </nav>
