--- a/app/items/template.hbs
+++ b/app/items/template.hbs
@@ -9,6 +9,7 @@
 
 <div class="row">
   <div class="col-md-12">
+    {{extents-map}}
     <table class="table table-responsive table-bordered table-hover table-striped">
       <thead>
         <tr>
