--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,6 @@
 /* bootstrap styles */
 @import "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css";
+@import url('https://js.arcgis.com/3.19/esri/css/esri.css');
 
 body {
   padding-top: 20px;
@@ -25,4 +26,10 @@ body {
 /* items */
 .search-form-inline {
   margin-top: 20px;
+}
+
+/* map */
+.extents-map {
+ height: 300px;
+margin-bottom: 20px;
 }
